--- a/ui/MusicShopUI/src/app/music/music.component.html
+++ b/ui/MusicShopUI/src/app/music/music.component.html
@@ -1,1 +1,35 @@
-<p>music works!</p>
+<div class="container-fluid text-center">
+    <table class="table table-bordered">
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Image</th>
+          <th scope="col">Artist Name</th>
+          <th scope="col">Genre Type</th>
+          <th scope="col">album</th>
+          <th scope="col">Song</th>
+          <th scope="col">Price</th>
+          <th scope="col">Add to Cart</th>
+        </tr>
+      </thead>
+
+
+
+      <tbody>
+
+        <tr *ngFor="let song of songs" class="text center">
+          <td *ngIf="!active || song.Artist_name.startsWith(Artist_name)">{{song.realId}}</td>
+          <!-- <td *ngIf="!active || song.Artist_name.startsWith(Artist_name)"><audio src = {{song.Songs}}></td> -->
+          <td *ngIf="!active || song.Artist_name.startsWith(Artist_name)">{{song.Artist_name}}</td>
+          <td *ngIf="!active || song.Artist_name.startsWith(Artist_name)">{{song.Genre_type}}</td>
+          <td *ngIf="!active || song.Artist_name.startsWith(Artist_name)">{{song.Albums}}</td>
+          <td *ngIf="!active || song.Artist_name.startsWith(Artist_name)">{{song.Genre_type}}</td>
+          <td *ngIf="!active || song.Artist_name.startsWith(Artist_name)">{{song.price | currency}}</td>
+          <td *ngIf="!active || song.Artist_name.startsWith(Artist_name)">
+            <button *ngIf="!song.hideAlert" (click)="addToCart(song); song.hideAlert = true; delay(2000, song)" type ="button" class = "btn btn-success">Add</button>
+          <h6><span class="badge badge-success" [hidden]="!song.hideAlert">Added to Cart</span></h6></td>
+        </tr>
+
+      </tbody>
+    </table>
+</div>
