--- a/ui/MusicShopUI/src/app/navbar/navbar.component.html
+++ b/ui/MusicShopUI/src/app/navbar/navbar.component.html
@@ -10,13 +10,13 @@
           <a class="nav-link" [routerLink]="['/home']" routerLinkActive="router-link-active">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Music</a>
+          <a class="nav-link" [routerLink]="['/music']" routerLinkActive="router-link-active">Music <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Art</a>
+            <a class="nav-link" [routerLink]="['/art']" routerLinkActive="router-link-active">Art <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" [routerLink]="['/about']" routerLinkActive="router-link-active">About <span class="sr-only">(current)</span></a>
         </li>
         
       </ul>
